# audiplex

./: .gitignore  CLAUDE.md  LICENSE  README.md  launch-hidden.vbs  launch.bat  setup-autostart.bat  setup-firewall.bat
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/audiplex/app/: AudiplexApp.kt  MainActivity.kt
android/app/src/main/java/com/audiplex/app/data/: ApiModule.kt  FavoritesStore.kt  MusicActions.kt  SettingsStore.kt
android/app/src/main/java/com/audiplex/app/navigation/: AppNavigation.kt  RootScaffold.kt
android/app/src/main/java/com/audiplex/app/playback/: MultiTapMediaSessionCallback.kt  PlaybackManager.kt  (+1 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
server/: pyproject.toml
server/audiplex/: auth.py  config.py  cue_parser.py  database.py  main.py  migrate_add_users.py  models.py  scanner.py  schemas.py  series_overrides.yaml
server/audiplex/routers/: app.py  auth_router.py  library.py  music.py  progress.py  streaming.py
server/audiplex/scanners/: audiobook_misc.py  music.py
server/audiplex/utils/: cover_art.py  metadata.py  openlibrary.py  streaming.py
server/tests/: conftest.py  test_api_library.py  test_api_music.py  test_api_progress.py  test_api_streaming.py  test_cue_parser.py  test_metadata.py  test_models_music.py  test_music_folders.py  test_scanner.py  test_scanner_audiobook_misc.py  test_scanner_music.py
(+37 files in other folders)
